--- a/index.html
+++ b/index.html
@@ -31,7 +31,24 @@
     <section class="main__wrapper">
         <div class="main__title">
             <h1 class="main__text">Hello Pretty</h1>
-            <a class="main__btn" href="https://sexdolls.com.ua/cart/">Press</a>
+            <a class="main__btn" href="#">Press</a>
+        </div>
+    </section>
+
+    <section class="question">
+        <div class="question__title">
+            <h1 class="question__item">FAQ</h1>
+            <h2 class="question__item">Common</h2>
+            <h3 class="question__item">question</h3>
+        </div>
+        <div class="question__faq">
+            <div class="question__faq-wrapper">
+                <article class="question__article">
+                    <h4 class="question__text">What is the typical turnaround time for a website project?</h4>
+                    <a  href="#">
+                    </a>
+                </article>
+            </div>
         </div>
     </section>
 
