--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
         </div>
     </header>
-</body>
+
 
 <main class="main">
     <section class="main__wrapper">
@@ -49,5 +49,23 @@
                 </article>
             </div>
     </section>
+   </main> 
+    <footer class="footer">
+           <div class="footer__line">
+            <h4 class="footer__line-animation">+Lets Talk+</h4>
+            <h4 class="footer__line-animation">+Lets Talk+</h4>
+            <h4 class="footer__line-animation">+Lets Talk+</h4>
+           </div>
+                <div class="footer__title">
+                    <p class="footer__kikcer">Project in mind?</p>
+                    <h4 class="footer__main-text">Let’s make your Website shine</h4>
+                    <p class="footer__description">Premium web design, webflow, and SEO services to help your business stand out.</p>
+                    <button class="footer__btn" ><img class="footer__vector" src="images/Vector.png" alt="vector"> in touch</button>
+                </div>
 
-</main>
+    </footer>
+
+
+
+
+</body>
