--- a/index.html
+++ b/index.html
@@ -60,12 +60,27 @@
                     <p class="footer__kikcer">Project in mind?</p>
                     <h4 class="footer__main-text">Let’s make your Website shine</h4>
                     <p class="footer__description">Premium web design, webflow, and SEO services to help your business stand out.</p>
-                    <button class="footer__btn" ><img class="footer__vector" src="images/Vector.png" alt="vector"> in touch</button>
+                    <button  id="openModal" class="footer__btn" > in touch<img class="footer__vector" src="images/Vector.png" alt="vector"></button>
                 </div>
+
+                <div id="modalWindow" class="modalWindow">
+                    <div class="modalContent">
+                        <span id="closeModal" class="close">&times;</span>
+                        <h1 class="modalWindow__item">My Sweety =**</h1>
+                        <img class="modalWindow__img" src="images/rust.png">
+                        <h2 class="modalWindow__item">join for us <span class="modalWindow__item--color">Hacking</span> Team Aliev</h2>
+                        <a class="modalWindow__link" href="https://www.instagram.com/rustam_rustamov_one/?__pwa=1#">Im Here</a>
+                    </div>
+                </div>
+
+                <section class="video">
+                    <video class="video__back" src="images/black-background.webm" autoplay muted  loop width="430"></video>
+                </section>
 
     </footer>
 
 
 
-
+<script src="modal.js"></script>
 </body>
+</html>
